# sdl2-embedded-snake

./: Cargo.toml
src/: main.rs
